fix: hide x overflow and prevent scrollbar from appearing when using 100vw dividers

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,5 @@
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
